k8s/plantuml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plantuml
  namespace: plantuml
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: plantuml
  sessionAffinity: None
  type: ClusterIP
