k8s/plantuml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  name: plantuml-ingress
  namespace: plantuml
spec:
  ingressClassName: nginx
  rules:
  - host: plantuml.k8sops.online
    http:
      paths:
      - backend:
          service:
            name: plantuml
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - plantuml.k8sops.online
    secretName: plantuml-k8sops-online-tls
